<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/employerJobs"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/white"
tools:context=".JobEmployerActivity">

<TextView
    android:id="@+id/employerJobsHeader"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Your Listed Jobs"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/employerJobsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employerJobsHeader"
        tools:itemCount="10"
        tools:listitem="@layout/job_employer_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>