...
        android:layout_marginEnd="12dp"
        android:text="PAY EMPLOYEE"
        app:layout_constraintEnd_toEndOf="@+id/employerSearchButton"
        app:layout_constraintTop_toBottomOf="@+id/employerSearchButton" />

    <Button
        android:id="@+id/employerYourJobsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="YOUR JOBS"
        app:layout_constraintStart_toStartOf="@+id/employerLogoutButton"
        app:layout_constraintTop_toBottomOf="@+id/employerPayButton" />
...
